Work on config defaults

--- a/serial_log.ini
+++ b/serial_log.ini
@@ -1,4 +1,17 @@
 [config]
-serialp  = /dev/ttyS0
-url = http://somewhere.com/remote-data.php
-senderid = 'dev1'
+; serial port data will be coming in on, some common values below
+; USB serial port
+;serialp  = /dev/ttyUSB0
+; Ubuntu on box with built-in serial port
+;serialp  = /dev/ttyS0
+; Pine A64
+;serialp  = /dev/ttyS2
+; Raspberry Pi, need to setup serial port first, see cheatsheet ttyAMA0
+serialp  = /dev/serial0
+
+; uncomment url to enable remote data push
+;url = http://somewhere.com/remote-data.php
+
+; commenting out stationId will default to incomming SerialNumber
+;stationId = TEST1
+
