Add new settings

--- a/serial_log.ini
+++ b/serial_log.ini
@@ -15,3 +15,11 @@ serialp  = /dev/serial0
 ; commenting out stationId will default to incomming SerialNumber
 ;stationId = TEST1
 
+; local log rotate period N-None, D-Day, M-Month, Y-Year
+;localLog = D
+
+; extra messages to help debug issues
+;debugMsg = 0
+
+; interval for heartbeat messages H-Hour, 10M-10 Min, M-Min
+;hbInterval = 10M
