Add options, warnings to serial_log.ini

--- a/serial_log.ini
+++ b/serial_log.ini
@@ -12,6 +12,9 @@ serialp  = /dev/serial0
 ; uncomment url to enable remote data push
 ;url = http://somewhere.com/remote-data.php
 
+; upkey - can change while leaving url and station the same to add some security
+;upkey = top_secret
+
 ; commenting out stationId will default to incomming SerialNumber
 ;stationId = TEST1
 
@@ -23,3 +26,7 @@ serialp  = /dev/serial0
 
 ; interval for heartbeat messages H-Hour, 10M-10 Min, M-Min
 ;hbInterval = 10M
+
+; rapid messages trigger
+;rmTrigger = D7
+;rmState = 0
