Add url2 option

--- a/serial_log.ini
+++ b/serial_log.ini
@@ -15,6 +15,12 @@ serialp  = /dev/serial0
 ; upkey - can change while leaving url and station the same to add some security
 ;upkey = top_secret
 
+; uncomment url to enable remote data push to second location
+;url2 = http://somewhere.com/remote-data.php
+
+; upkey2 - can change while leaving url and station the same to add some security
+;upkey2 = top_secret
+
 ; commenting out stationId will default to incomming SerialNumber
 ;stationId = TEST1
 
