--- a/serial_log.ini
+++ b/serial_log.ini
@@ -1,5 +1,7 @@
 [config]
 ; serial port data will be coming in on, some common values below
+; Windows built in serial port
+serialp  = COM1
 ; USB serial port
 ;serialp  = /dev/ttyUSB0
 ; Ubuntu on box with built-in serial port
@@ -7,7 +9,7 @@
 ; Pine A64
 ;serialp  = /dev/ttyS2
 ; Raspberry Pi, need to setup serial port first, see cheatsheet ttyAMA0
-serialp  = /dev/serial0
+;serialp  = /dev/serial0
 
 ; uncomment url to enable remote data push
 ;url = http://somewhere.com/remote-data.php
@@ -28,7 +30,7 @@ serialp  = /dev/serial0
 ;localLog = D
 
 ; extra messages to help debug issues
-;debugMsg = 0
+;debugMsg = 1
 
 ; interval for heartbeat messages H-Hour, 10M-10 Min, M-Min
 ;hbInterval = 10M
