--- a/serial_log.ini
+++ b/serial_log.ini
@@ -1,15 +1,15 @@
 [config]
 ; serial port data will be coming in on, some common values below
 ; Windows built in serial port
-serialp  = COM1
+;serialp  = COM1
 ; USB serial port
 ;serialp  = /dev/ttyUSB0
 ; Ubuntu on box with built-in serial port
 ;serialp  = /dev/ttyS0
 ; Pine A64
 ;serialp  = /dev/ttyS2
-; Raspberry Pi, need to setup serial port first, see cheatsheet ttyAMA0
-;serialp  = /dev/serial0
+; Raspberry Pi, need to setup serial port first, see cheatsheet
+serialp  = /dev/serial0
 
 ; uncomment url to enable remote data push
 ;url = http://somewhere.com/remote-data.php
