Add note on log file location

--- a/serial_log.ini
+++ b/serial_log.ini
@@ -26,6 +26,7 @@ serialp  = /dev/serial0
 ; commenting out stationId will default to incomming SerialNumber
 ;stationId = TEST1
 
+; local log written to ~/log if present, falls back to the home dir if ~/log not present
 ; local log rotate period N-None, D-Day, M-Month, Y-Year
 ;localLog = D
 
